adjustment for index page

--- a/src/app/index/index.component.html
+++ b/src/app/index/index.component.html
@@ -13,7 +13,7 @@
         <div fxFlex.lg="30%" fxFlex.xl="30%" fxFlex.xs="100%" fxFlex.sm="30%" class="category">
             <div  class="card__img card__img--top">
 
-                <img class="category-image" fxFlex.lg="100%" src="assets/images/characters.jpg" (click)="getToList('people')">
+                <img class="category-image" fxFlex="100%" src="assets/images/characters.jpg" (click)="getToList('people')">
                 <span class="category-title tc-red-600 display-block jedi-font" (click)="getToList('people')">Characters</span>
 
             </div>
@@ -21,7 +21,7 @@
         <div  fxFlex.lg="30%" fxFlex.xl="30%" fxFlex.xs="100%" fxFlex.sm="30%" class="category">
             <div id="character" class="card__img card__img--top">
 
-                <img class="category-image" fxFlex.lg="100%" src="assets/images/films.jpg" (click)="getToList('film')">
+                <img class="category-image" fxFlex="100%" src="assets/images/films.jpg" (click)="getToList('film')">
                 <span class="category-title tc-yellow-400 display-block jedi-font" (click)="getToList('film')">Films</span>
 
             </div>
@@ -32,7 +32,7 @@
         <div  fxFlex.lg="30%" fxFlex.xl="30%" fxFlex.xs="100%" fxFlex.sm="30%" class="category">
             <div  class="card__img card__img--top">
 
-                <img class="category-image"  fxFlex.lg="100%" src="assets/images/species.jpg" (click)="getToList('species')">
+                <img class="category-image"  fxFlex="100%" src="assets/images/species.jpg" (click)="getToList('species')">
                 <span class="category-title tc-deep-orange-600  display-block jedi-font" (click)="getToList('species')">Species</span>
 
             </div>
@@ -40,7 +40,7 @@
         <div  fxFlex.lg="30%" fxFlex.xl="30%" fxFlex.xs="100%" fxFlex.sm="30%" class="category category-last ">
             <div id="character" class="card__img card__img--top">
 
-                <img class="category-image" fxFlex.lg="100%" src="assets/images/starships.jpg" (click)="getToList('starship')">
+                <img class="category-image" fxFlex="100%" src="assets/images/starships.jpg" (click)="getToList('starship')">
                 <span class="category-title tc-white-1 display-block jedi-font" (click)="getToList('starship')">Starships</span>
 
             </div>
@@ -49,7 +49,7 @@
         <div fxFlex.lg="30%" fxFlex.xl="30%" fxFlex.xs="100%"  fxFlex.sm="30%" class="category category-last ">
             <div  class="card__img card__img--top">
 
-                <img class="category-image" fxFlex.lg="100%" src="assets/images/vehicles.jpg" (click)="getToList('vehicle')">
+                <img class="category-image" fxFlex="100%" src="assets/images/vehicles.jpg" (click)="getToList('vehicle')">
                 <span class="category-title tc-blue-200 display-block jedi-font" (click)="getToList('vehicle')">Vehicles</span>
 
             </div>
@@ -58,7 +58,7 @@
         <div  fxFlex.lg="30%" fxFlex.xl="30%" fxFlex.xs="100%"  fxFlex.sm="30%" class="category category-last ">
             <div  class="card__img card__img--top">
 
-                <img class="category-image"  fxFlex.lg="100%" src="assets/images/planets.jpg" (click)="getToList('planet')">
+                <img class="category-image"  fxFlex="100%" src="assets/images/planets.jpg" (click)="getToList('planet')">
                 <span class="category-title tc-deep-purple-300 display-block jedi-font" (click)="getToList('planet')">Planets</span>
 
             </div>
