--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,6 +3,7 @@
 <ngx-spinner
 bdColor = "rgba(51, 51, 51, 0.8)" size = "large" color = "#8303e2" type = "line-scale"
 ></ngx-spinner>
+
 <mat-sidenav-container>
   <!--<mat-sidenav  #sidenav role="navigation">
    <mat-nav-list>
@@ -26,52 +27,59 @@ bdColor = "rgba(51, 51, 51, 0.8)" size = "large" color = "#8303e2" type = "line-
   </mat-sidenav> -->
   <mat-sidenav-content>
     <mat-toolbar color="primary">
-     <div fxHide.gt-xs>
-       <button mat-icon-button>
-        <mat-icon>menu</mat-icon>
-      </button>
-    </div>
-     <div>
-       <a>
-          {{title}}
-       </a>
-     </div>
-   <!--  <div fxFlex fxLayout fxLayoutAlign="flex-end"  fxHide.xs>
-        <ul fxLayout fxLayoutGap="20px" class="navigation-items">
-            <li>
+        <mat-toolbar-row class="menu-btn">
+            <button mat-icon-button (click)="sidenav.toggle()" fxShow="true" fxHide.gt-sm>
+              <mat-icon>menu</mat-icon>
+            </button>
+            <div >
                 <a>
-                  <mat-icon class="icon">input</mat-icon>
-                  <span  class="label">Login</span>
-                 </a>
-            </li>
-            <li>
-              <a >
-                  <mat-icon class="icon">home</mat-icon>
-                  <span class="label">Home</span>
-              </a>
-            </li>
-            <li>
-                <a>
-                    <mat-icon class="icon">dashboard</mat-icon>
-                    <span class="label">Dashboard</span>
+                   <span class="jedi-font">{{title}}</span>
                 </a>
-              </li>
-            <li>
-                <a>
-                  <mat-icon class="icon">input</mat-icon>
-                  <span class="label">LogOut</span>
-                 </a>
-            </li>
-        </ul>
-     </div> -->
-    </mat-toolbar>
+              </div>
+            <span class="menu-spacer"></span>
+            <div md-offset="7" fxShow="true" fxHide.lt-md>
+              <!-- The following menu items will be hidden on both SM and XS screen sizes --><span flex></span>
+              <button md-offset="7" mat-button [matMenuTriggerFor]="menu" class="menu-btn" >Category</button>
+            <mat-menu #menu="matMenu">
+              <button mat-menu-item>Characters</button>
+              <button mat-menu-item>Films</button>
+              <button mat-menu-item>Species</button>
+              <button mat-menu-item>Starshipes</button>
+              <button mat-menu-item>Vehicles</button>
+              <button mat-menu-item>Planets</button>
+            </mat-menu>
+            </div>
+          </mat-toolbar-row>
+        </mat-toolbar>
+          <mat-sidenav-container fxFlexFill>
+              <mat-sidenav #sidenav>
+                <mat-nav-list>
+                  <a (click)="sidenav.toggle()" href="" mat-list-item>Close</a>
+                  <a href="#" mat-list-item>Characters</a>
+                  <a href="#" mat-list-item>Films</a>
+                  <a href="#" mat-list-item>Species</a>
+                  <a href="#" mat-list-item>Starshipes</a>
+                  <a href="#" mat-list-item>Vehicles</a>
+                  <a href="#"mat-list-item>Planets</a>
+                </mat-nav-list>
+              </mat-sidenav>
+              
+              <mat-sidenav-content fxFlexFill>
+                  <div class="stars"><div class="twinkling"></div></div>
+                  <main>
+                      
+                      <router-outlet></router-outlet>
+                    <app-messages></app-messages>
+                   
+                  </main>
+              </mat-sidenav-content>
+            </mat-sidenav-container>
     
-    <main>
-        <!-- <div class="stars"><div class="twinkling"></div></div> -->
-        <router-outlet></router-outlet>
-      <app-messages></app-messages>
-     
-    </main>
+   
+    
+   
+
+    
  
   </mat-sidenav-content>
   
