fiexed menubar and V font

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -37,7 +37,7 @@ bdColor = "rgba(51, 51, 51, 0.8)" size = "large" color = "#8303e2" type = "line-
                 </a>
               </div>
             <span class="menu-spacer"></span>
-            <div md-offset="7" fxShow="true" fxHide.lt-md>
+            <div fxFlexOffset="80%"fxShow="true" fxHide.lt-md>
               <!-- The following menu items will be hidden on both SM and XS screen sizes --><span flex></span>
               <button md-offset="7" mat-button [matMenuTriggerFor]="menu" class="menu-btn" >Category</button>
             <mat-menu #menu="matMenu">
