--- a/src/app/index/index.component.html
+++ b/src/app/index/index.component.html
@@ -50,7 +50,7 @@
             <div  class="card__img card__img--top">
 
                 <img class="category-image" fxFlex="100%" src="assets/images/vehicles.jpg" (click)="getToList('vehicle')">
-                <span class="category-title tc-blue-200 display-block jedi-font" (click)="getToList('vehicle')">Vehicles</span>
+                <span class="category-title tc-blue-200 display-block jedi-font" (click)="getToList('vehicle')">`ehicles</span>
 
             </div>
         </div>
