--- a/src/styles.css
+++ b/src/styles.css
@@ -44,6 +44,9 @@ button {
   background: #fffbfb;
   color: rgba(0,0,0,.87);
 }
+.mat-menu-item{
+  background: #fffbfb !important;
+}
 /* ============================================================================================== 
 SED Innovations
 https://sed.am
