--- a/src/app/film-details/film-details.component.html
+++ b/src/app/film-details/film-details.component.html
@@ -48,7 +48,7 @@
                             <mat-card-content fxLayout="row wrap" fxLayoutAlign="center">
                               <div fxLayout="column wrap" fxLayoutGap="20px" fxFlexOffset="10px" *ngFor="let character of film.f_characters">
                                   <mat-card class="card my-card sm-card">
-                                      <mat-card-subtitle><a  href="{{character.url}}">{{character.name}}</a></mat-card-subtitle>
+                                      <mat-card-subtitle (click)="gotoDetails(character.url)">{{character.name}}</mat-card-subtitle>
 
                                        <!-- <div md-card-avatar [ngStyle]="{'background-image': 'url(' + film.img_url + ')', 'background-size': 'cover'  }"></div> -->
                                        <img mat-card-image class="header-img mat-card-avatar" src="{{character.img_url}}">
