--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -63,13 +63,23 @@ bdColor = "rgba(51, 51, 51, 0.8)" size = "large" color = "#8303e2" type = "line-
                   <a href="#"mat-list-item>Planets</a>
                 </mat-nav-list>
               </mat-sidenav>
-              
+            
               <mat-sidenav-content fxFlexFill>
                   <div class="stars"><div class="twinkling"></div></div>
                   <main>
-                      
+                    
                       <router-outlet></router-outlet>
-                    <app-messages></app-messages>
+                      <div class="footer-sec">
+                        <footer class="footer">
+                            <div class="container">
+                              <div class="content has-text-centered">
+                                
+                                  Made by Noel,Sai,Han
+                                
+                              </div>
+                            </div>
+                        </footer>
+                      </div>
                    
                   </main>
               </mat-sidenav-content>
