--- a/src/app/people-details/people-details.component.html
+++ b/src/app/people-details/people-details.component.html
@@ -15,12 +15,12 @@
 
 <section fxLayout="row wrap" fxLayoutAlign="center" *ngIf="people">
     <mat-card fxFlex="1200px" fxLayoutAlign="center" fxFlex.sm="100%" fxFlex.xs="100%">
-      
+
         <mat-card-content fxLayoutAlign="center">
-          
+
             <div fxLayout="column wrap" fxLayoutGap="40px">
                 <mat-card-title fxLayoutAlign="center">{{ people.name }}</mat-card-title>
-       
+
                 <div fxHide.lg fxHide.xl fxLayout="row wrap">
                         <mat-card class="card my-card">
 
@@ -81,10 +81,10 @@
             <mat-card-content fxLayout="row wrap">
               <div fxLayout="column wrap" fxLayoutGap="20px" fxFlex.xs="35%" fxFlex.lg="17%" fxFlex.xl="17%" fxFlexOffset="30px" *ngFor="let film of people.p_films">
                   <mat-card class="card my-card sm-card">
-                      <mat-card-subtitle><a  href="{{film.url}}">{{film.title}}</a></mat-card-subtitle>
+                      <mat-card-subtitle (click)="gotoDetails(film.url)"><strong>{{film.title}}</strong></mat-card-subtitle>
 
                        <!-- <div md-card-avatar [ngStyle]="{'background-image': 'url(' + film.img_url + ')', 'background-size': 'cover'  }"></div> -->
-                       <img class="header-img mat-card-avatar"  mat-card-image src="{{film.img_url}}">
+                       <img class="header-img mat-card-avatar"  mat-card-image src="{{film.img_url}}" (click)="gotoDetails(film.url)">
 
                     </mat-card>
                     <!-- <mat-card class="card my-card">
@@ -106,9 +106,9 @@
             <mat-card-content fxLayout="row wrap" fxLayoutAlign="center">
               <div fxLayout="column wrap" fxLayoutGap="20px" fxFlexOffset="10px" *ngFor="let vehicle of people.p_vehicles">
                   <mat-card class="card my-card sm-card">
-                      <mat-card-subtitle><a  href="{{vehicle.url}}">{{vehicle.name}}</a></mat-card-subtitle>
+                      <mat-card-subtitle (click)="gotoDetails(vehicle.url)"><strong>{{vehicle.name}}</strong></mat-card-subtitle>
 
-                       <img mat-card-image  class="header-img mat-card-avatar" src="{{vehicle.img_url}}">
+                       <img mat-card-image  class="header-img mat-card-avatar" src="{{vehicle.img_url}}" (click)="gotoDetails(vehicle.url)">
 
 
                     </mat-card>
@@ -125,10 +125,10 @@
             <mat-card-content fxLayout="row wrap" fxLayoutAlign="center">
               <div fxLayout="column wrap" fxLayoutGap="20px" fxFlexOffset="10px" *ngFor="let starship of people.p_starships">
                   <mat-card class="card my-card sm-card">
-                      <mat-card-subtitle><a  href="{{starship.url}}">{{starship.name}}</a></mat-card-subtitle>
+                      <mat-card-subtitle (click)="gotoDetails(starship.url)"><strong>{{starship.name}}</strong></mat-card-subtitle>
 
                        <!-- <div md-card-avatar [ngStyle]="{'background-image': 'url(' + film.img_url + ')', 'background-size': 'cover'  }"></div> -->
-                       <img mat-card-image class="header-img mat-card-avatar" src="{{starship.img_url}}">
+                       <img mat-card-image class="header-img mat-card-avatar" src="{{starship.img_url}}" (click)="gotoDetails(starship.url)">
 
                     </mat-card>
               </div>
