--- a/src/app/starship-details/starship-details.component.html
+++ b/src/app/starship-details/starship-details.component.html
@@ -2,7 +2,7 @@
 <div class="container sec-info">
   <section fxLayout="row wrap" fxLayoutAlign="center" *ngIf="starship">
       <mat-card fxFlex="1200px" fxLayoutAlign="center" fxFlex.sm="100%" fxFlex.xs="100%">
-          
+
           <mat-card-content fxLayoutAlign="center">
             <div fxLayout="column wrap" fxLayoutGap="40px">
                     <mat-card-title fxLayoutAlign="center">{{ starship.name }}</mat-card-title>
@@ -10,7 +10,7 @@
                         <mat-card class="card my-card">
 
                             <img mat-card-image src="{{starship.img_url}}">
-    
+
                         </mat-card>
 
                 </div>
@@ -74,11 +74,11 @@
                     <mat-card class="card my-card sm-card">
                         <mat-card-subtitle><a  href="{{character.url}}">{{character.name}}</a></mat-card-subtitle>
 
-                        
+
                          <img mat-card-image class="header-img mat-card-avatar" src="{{character.img_url}}">
 
                       </mat-card>
-                      
+
                 </div>
               </mat-card-content>
             </mat-card>
@@ -94,11 +94,11 @@
               <mat-card-content fxLayout="row wrap" fxLayoutAlign="center">
                 <div fxLayout="column wrap" fxLayoutGap="20px" fxFlexOffset="30px" *ngFor="let character of starship.s_pilots">
                     <mat-card class="card my-card">
-                        <mat-card-subtitle><a  href="{{character.url}}">{{character.name}}</a></mat-card-subtitle>
+                        <mat-card-subtitle (click)="gotoDetails(character.url)"><strong>{{character.name}}</strong></mat-card-subtitle>
 
 
                          <!-- <div md-card-avatar [ngStyle]="{'background-image': 'url(' + starship.img_url + ')', 'background-size': 'cover'  }"></div> -->
-                         <img mat-card-image class="header-img mat-card-avatar" src="{{character.img_url}}">
+                         <img mat-card-image class="header-img mat-card-avatar" src="{{character.img_url}}" (click)="gotoDetails(character.url)">
 
                       </mat-card>
                       <!-- <mat-card class="card my-card">
@@ -121,11 +121,11 @@
               <mat-card-content fxLayout="row wrap" fxLayoutAlign="center">
                 <div fxLayout="column wrap" fxLayoutGap="20px" fxFlexOffset="10px" *ngFor="let film of starship.s_films">
                     <mat-card class="card my-card sm-card">
-                        <mat-card-subtitle><a  href="{{film.url}}">{{film.title}}</a></mat-card-subtitle>
+                        <mat-card-subtitle (click)="gotoDetails(film.url)"><strong>{{film.title}}</strong></mat-card-subtitle>
 
 
                          <!-- <div md-card-avatar [ngStyle]="{'background-image': 'url(' + starship.img_url + ')', 'background-size': 'cover'  }"></div> -->
-                         <img mat-card-image class="header-img mat-card-avatar" src="{{film.img_url}}">
+                         <img mat-card-image class="header-img mat-card-avatar" src="{{film.img_url}}" (click)="gotoDetails(film.url)">
 
                       </mat-card>
                 </div>
