--- a/src/app/vehicle-details/vehicle-details.component.html
+++ b/src/app/vehicle-details/vehicle-details.component.html
@@ -2,7 +2,7 @@
 <div class="container sec-info">
   <section fxLayout="row wrap" fxLayoutAlign="center" *ngIf="vehicle">
       <mat-card fxFlex="1200px" fxLayoutAlign="center" fxFlex.sm="100%" fxFlex.xs="100%">
-          
+
           <mat-card-content fxLayoutAlign="center">
             <div fxLayout="column wrap" fxLayoutGap="40px">
                 <mat-card-title fxLayoutAlign="center">{{ vehicle.name }}</mat-card-title>
@@ -67,11 +67,11 @@
               <mat-card-content fxLayout="row wrap" fxLayoutAlign="center">
                 <div fxLayout="column wrap" fxLayoutGap="20px" fxFlex.xs="35%" fxFlex.lg="17%" fxFlex.xl="17%" fxFlexOffset="30px" *ngFor="let character of vehicle.v_pilots">
                     <mat-card class="card my-card sm-card">
-                        <mat-card-subtitle><a  href="{{character.url}}">{{character.name}}</a></mat-card-subtitle>
+                        <mat-card-subtitle (click)="gotoDetails(character.url)"><strong>{{character.name}}</strong></mat-card-subtitle>
 
 
                          <!-- <div md-card-avatar [ngStyle]="{'background-image': 'url(' + vehicle.img_url + ')', 'background-size': 'cover'  }"></div> -->
-                         <img mat-card-image class="header-img mat-card-avatar" src="{{character.img_url}}">
+                         <img mat-card-image class="header-img mat-card-avatar" src="{{character.img_url}}" (click)="gotoDetails(character.url)">
 
                       </mat-card>
                       <!-- <mat-card class="card my-card">
@@ -96,11 +96,11 @@
                 <div fxLayout="column wrap" fxLayoutGap="20px" fxFlexOffset="10px" *ngFor="let film of vehicle.v_films">
                     <mat-card class="card my-card sm-card">
 
-                        <mat-card-subtitle><a  href="{{film.url}}">{{film.title}}</a></mat-card-subtitle>
+                        <mat-card-subtitle (click)="gotoDetails(film.url)"><strong>{{film.title}}</strong></mat-card-subtitle>
 
 
                          <!-- <div md-card-avatar [ngStyle]="{'background-image': 'url(' + vehicle.img_url + ')', 'background-size': 'cover'  }"></div> -->
-                         <img mat-card-image class="header-img mat-card-avatar" src="{{film.img_url}}">
+                         <img mat-card-image class="header-img mat-card-avatar" src="{{film.img_url}}" (click)="gotoDetails(film.url)">
 
                       </mat-card>
                 </div>
