--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -70,6 +70,10 @@ bdColor = "rgba(51, 51, 51, 0.8)" size = "large" color = "#e4e122" type = "line-
                   <main>
 
                       <router-outlet></router-outlet>
+                      <div (click)="goToTop()" class="btt-btn" style="text-align:right;padding-right:5px;">
+                        <i class="material-icons" style="color:white;position:relative; font-size:40px">&#xE316;</i>
+                      </div>
+
                       <div class="footer-sec">
                         <footer class="footer">
                             <div class="container">
