--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -54,7 +54,7 @@ bdColor = "rgba(51, 51, 51, 0.8)" size = "large" color = "#e4e122" type = "line-
           <mat-sidenav-container fxFlexFill>
               <mat-sidenav #sidenav>
                 <mat-nav-list>
-                  <a (click)="sidenav.toggle()" href="" mat-list-item>Close</a>
+                  <a (click)="sidenav.toggle()" mat-list-item>Close</a>
                   <a (click)="getToList('people')" mat-list-item>Characters</a>
                   <a (click)="getToList('film')" mat-list-item>Films</a>
                   <a (click)="getToList('species')" mat-list-item>Species</a>
@@ -79,7 +79,7 @@ bdColor = "rgba(51, 51, 51, 0.8)" size = "large" color = "#e4e122" type = "line-
                             <div class="container">
                               <div class="content has-text-centered">
 
-                                  Made by Noel,Sai,Han
+                                DEVELOPED BY <strong>HAN,NOEL&SAI</strong> &copy; 2019
 
                               </div>
                             </div>
