updated new starwars api url

--- a/src/app/films/films.component.html
+++ b/src/app/films/films.component.html
@@ -22,7 +22,7 @@
 
 
     <button (click)="getFilmDetails(film['url'])" mat-button>View</button>
-    <button mat-button (click)="shareApi()"> <strong>Share</strong></button>
+    <!-- <button mat-button (click)="shareApi()"> <strong>Share</strong></button> -->
 
   </mat-card-actions>
   </mat-card>
